# cto-blockchain-operator

./: .gitignore  Cargo.toml  Dockerfile  PROGRESS_SUMMARY.md  README.md  TESTING_PLAN.md
.github/workflows/: build-only.yaml  test-kind.yaml
config/crd/bases/: blockchain.5dlabs.io_aptosnodes.yaml  blockchain.5dlabs.io_solananodes.yaml  blockchain.5dlabs.io_suivalidators.yaml
deploy/: deployment.yaml  rbac.yaml
examples/: aptos-validator.yaml  solana-archival.yaml  solana-external-cluster.yaml  solana-rpc.yaml  solana-validator.yaml  sui-validator.yaml
examples/scenarios/: solana-add-worker.yaml  solana-new-cluster.yaml
src/: lib.rs  main.rs
src/controllers/: mod.rs  solana.rs
src/crds/: mod.rs  solana.rs
src/models/: mod.rs
src/providers/: cherry.rs  latitude.rs  mod.rs  ovh.rs
tests/: cherry_provider_test.rs  crd_validation_test.rs  integration_test.rs  latitude_provider_test.rs  ovh_provider_test.rs  solana_controller_test.rs
